# playground-ansible

./: Makefile  README.md  pyproject.toml  requirements.yml
.github/workflows/: main.yml
roles/docker/tasks/: main.yml
roles/docker_app/files/: docker-compose.yml
roles/docker_app/molecule/docker_app/: converge.yml  molecule.yml
roles/docker_app/tasks/: main.yml
