[tool.poetry]
name = "playground-ansible"
version = "0.0.0"
description = "Ansible Playground"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.15.5"

[tool.poetry.group.lint.dependencies]
ansible-lint = { version = "^6.21.1", markers = "platform_system != 'Windows'" }

[tool.poetry.group.test.dependencies]
molecule = "^6.0.2"
molecule-plugins = { version = "^23.5.0", extras = ["vagrant"] }
pytest = "^7.4.2"
pytest-ansible = "^4.1.1"

[tool.pytest.ini_options]
addopts = "--verbose"
testpaths = ["tests"]
