[tool.poetry]
name = "playground-ansible"
version = "0.0.0"
description = "Ansible Playground"
authors = ["DeadNews <aurczpbgr@mozmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
ansible-core = "^2.16.0"

[tool.poetry.group.lint.dependencies]
ansible-lint = { version = "^6.22.0", markers = "platform_system != 'Windows'" }

[tool.poetry.group.test.dependencies]
molecule = "^6.0.2"
molecule-plugins = { version = "^23.5.0", extras = ["vagrant"] }
